# libkdm

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  kdm.h
test/: CMakeLists.txt  test.c  testdata.h
